@@ -11,6 +11,7 @@
 - SF Patch #1619455 for SF bug #1619439 MyDSpace Group Membership Special Groups
 - SF Patch #1606719 for feature request #1145371 Link to admin area
 - SF Patch #1610030 for SF Bug #1076506 Item import command line option for application of template
+- SF Patch #1624212 for SF Bug #1606449 Improve usability of bitstream list in item display
 
 (K. Nakagami)
 - SF Patch #1591969 for SF bug #1583372 DCDate.toString returns invalid string
